# urdf_capsule_generator_wrapper

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_separately.sh  source_paths.sh
roboptim-capsule/: CMakeLists.txt
roboptim-capsule/cmake/: pkg-config.cmake
roboptim-core/: .gitmodules  CMakeLists.txt
roboptim-core-plugin-ipopt/: CMakeLists.txt
roboptim-core/tests/: CMakeLists.txt
robot_capsule_generator/: CMakeLists.txt
robot_capsule_generator/python/: robot_capsule_urdf  robot_capsule_urdf_to_rviz
